--- a/parallel.tex
+++ b/parallel.tex
@@ -186,7 +186,7 @@
 
     \vfill
     \centering \includegraphics<1>[keepaspectratio=true,scale=0.08]{fatanode.png}
-    \centering \includegraphics<2>[keepaspectratio=true,scale=0.15]{fatanode2.png}
+    \centering \includegraphics<2>[keepaspectratio=true,scale=0.80]{fatanode2.png}
 \end{frame}
 
 \begin{frame}{Parallelism and Concurrency}
@@ -760,7 +760,8 @@
             \item Share nogoods using a barrier on restarts.
         \end{itemize}
     }\only<2>{
-        \includegraphics{gen-graph-psbs.pdf}%
+        \centering
+        \includegraphics[scale=0.9]{gen-graph-psbs.pdf}%
     }
 \end{frame}
 
